syntax = "proto3";
package grpc;

service Controller {

    rpc SayHello (HelloRequest) returns (HelloResponse) {
    }
    rpc SayStream (stream RequestStreamObj) returns (stream ResponseStreamObj) {
    }

}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message RequestStreamObj {
    int32 requestid = 1;
    string data = 2;
}

message ResponseStreamObj {
    int32 responseid = 1;
    string data = 2;
}